# design-patterns-with-python

./: README.md  pyproject.toml
src/1_creational/: 1_01_factory.py  1_02_abstract_factory.py  1_03_builder.py  1_04_prototype.py  1_05_singleton.py
src/2_structural/: 2_01_adapter.py  2_02_bridge.py  2_03_composite.py  2_04_decorator.py  2_05_facade.py  2_06_flyweight.py  2_07_proxy.py
src/3_behavioral/: 3_01_chain_of_responsibility.py  3_02_command.py  3_03_iterator.py  3_04_mediator.py  3_05_memento.py  3_06_observer.py  3_07_state.py  3_08_strategy.py  3_09_template.py  3_10_visitor.py
